[project]
name = "caa-control-variates"
version = "1.0.0"
description = "Demonstration of Covariant Approximation Averaging (CAA) on real-world MCMC correlator data from lattice QCD simulations. Serves also as an usage example of statpy."
requires-python = ">=3.12"
dependencies = [
    "statpy",
    "numpy",
    "matplotlib",
    "nbconvert",
    "ipykernel",
    "pandas>=3.0.3",
]

# statpy is not published on PyPI. After cloning it locally, register your
# checkout with `uv add /path/to/statpy` (see the Setup section in README.md);
# uv writes the path into your local config, so it is intentionally not
# committed here.
